# spark_for_dpm

gopchop-1.1.8/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  gopchop.desktop  gopchop.ebuild  gopchop.glade  gopchop.gladep  gopchop.spec  gopchop.spec.in
gopchop-1.1.8/docs/: Makefile.am  Makefile.in  README  gopchop.1  gopchop.sgml  gtkspu.1  gtkspu.sgml  libmpeg2.txt  libvo.txt  mpegcat.1  mpegcat.sgml
gopchop-1.1.8/include/: GOPchop.h  Makefile.am  Makefile.in  config.h.in  gettext.h  video_out.h
gopchop-1.1.8/libvo/: Makefile.am  Makefile.in  README  video_out_dx.c  video_out_null.c  video_out_pgm.c  video_out_sdl.c  video_out_x11.c
gopchop-1.1.8/pixmaps/: Makefile.am  Makefile.in  about.xpm  error.xpm
gopchop-1.1.8/po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  de.po  en.po  fr.po
gopchop-1.1.8/src/: Bounds.cpp  Bounds.h  ElementStream.cpp  ElementStream.h  FirstPack.cpp  FirstPack.h  GOPutils.cpp  GOPutils.h  GroupOfPictures.cpp  GroupOfPictures.h  List.cpp  List.h  MPEG2Parser.cpp  MPEG2Parser.h  Main.cpp  Makefile.am  Makefile.in  Pack.cpp  Pack.h  Parser.cpp  Parser.h  Picture.cpp  Picture.h  Vector.cpp  Vector.h  callbacks.cpp  callbacks.h  display.cpp  display.h  file_buffer.c  file_buffer.h  gtkspu.c  interface.c  interface.h  m2parse.cpp  main.h  mpeg2consts.c  mpeg2consts.h  mpeg2structs.h  mpegcat.c  (+6 more)
gopchop-1.1.8/tests/: Makefile.am  Makefile.in  test-stub.cpp
spark-lifelog/src/cs6203/: PeopleCounting.scala
video-hdfs/: .classpath  .project
video-hdfs/src/: GOPFinder.java
video-hdfs/src/cpsc551/videoprocessing/utils/: VideoRecordReader.java
video-hdfs/src/cs6203/utils/: GOP.java  GOPFinder.java  GOPInputFormat.java  GOPRecordReader.java
