EXTRA_DIST = \
    about.xpm \
    error.xpm \
    gopchop.png \
    menu_about.png

gopchopdistpixdir = $(datadir)/pixmaps/gopchop
gopchopdistpix_DATA = about.xpm error.xpm menu_about.png

distpixmapdir = $(datadir)/pixmaps
distpixmap_DATA = gopchop.png

appicondir = $(datadir)/pixmaps
appicon_DATA = gopchop.png
